[package]
name = "chili"
description = "low-overhead parallelization library"
version = "0.2.0"
edition = "2021"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/dragostis/chili"
documentation = "https://docs.rs/chili"
keywords = ["join", "concurrency", "parallel", "spice"]
categories = ["concurrency"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dev-dependencies]
divan = "0.1.14"
rayon = "1.10.0"

[[bench]]
name = "overhead"
harness = false
